# Backend

./: README.md  auth_services.py  main.py  pyproject.toml  requirements.txt
database/: db.py
models/: model.py  schema.py
routers/: requests.py  users.py
utils/: auth.py  config.py
