[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pinto Tetteh Aaron <aaronpinto111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
